BindingAdapter에 Glide 써서 imageUrl 받아와서 뿌려주기

--- a/app/src/main/res/layout/fragment_air_visual.xml
+++ b/app/src/main/res/layout/fragment_air_visual.xml
@@ -55,6 +55,11 @@
             app:aqius="@{pollution.data.current.pollution.aqius}"
             tools:text="보통" />
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:tempUrl="@{pollution.data.current.weather.ic}" />
+
 
     </LinearLayout>
 </layout>
