--- a/app/src/main/res/layout/fragment_air_visual.xml
+++ b/app/src/main/res/layout/fragment_air_visual.xml
@@ -15,41 +15,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:orientation="vertical"
         tools:context=".AirVisualFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="@{Integer.toString(pollution.data.current.pollution.aqius)}"
             tools:text="미세먼지" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             app:city="@{pollution.data.city}"
             tools:text="city" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="@{Integer.toString(pollution.data.current.weather.hu)}"
             tools:text="humid" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             app:windSpeed="@{Double.toString(pollution.data.current.weather.ws)}"
             tools:text="windSpeed" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             app:aqius="@{pollution.data.current.pollution.aqius}"
