--- a/app/src/main/res/menu/bottom_main.xml
+++ b/app/src/main/res/menu/bottom_main.xml
@@ -5,6 +5,10 @@
     <item
         android:icon="@drawable/ic_map_black_24dp"
         android:title="지도보기" />
+
+    <item
+        android:icon="@drawable/ic_weather_black_24dp"
+        android:title="날씨보기" />
     <item
         android:icon="@drawable/ic_lately_position_black_24dp"
         android:title="최근위치" />
