MapActivity 만든거 mapFragment 로 옮기고 bottomNav 랑 연결하려고 함(아직)

--- a/app/src/main/res/layout/fragment_air_visual.xml
+++ b/app/src/main/res/layout/fragment_air_visual.xml
@@ -13,11 +13,12 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/airvisual"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        tools:context=".AirVisualFragment">
+        tools:context=".ui.AirVisualFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <!--<TextView-->
