--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
         android:background="?android:attr/windowBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
