--- a/app/src/main/res/menu/bottom_main.xml
+++ b/app/src/main/res/menu/bottom_main.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/map"
         android:icon="@drawable/ic_map_black_24dp"
         android:title="지도보기" />
 
     <item
+        android:id="@+id/airvisual"
         android:icon="@drawable/ic_weather_black_24dp"
         android:title="날씨보기" />
     <item
