--- a/app/src/main/res/layout/dialog_marker.xml
+++ b/app/src/main/res/layout/dialog_marker.xml
@@ -2,7 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout">
 
     <data>
 
@@ -24,13 +25,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:text="@{favorite.address}"
             android:id="@+id/address_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="serif"
+            android:text="@{favorite.address}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_text"
@@ -39,10 +40,10 @@
         <TextView
             android:id="@+id/name_text"
             android:layout_width="wrap_content"
-            android:text="@{favorite.name}"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:text="@{favorite.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,11 +54,14 @@
             android:id="@+id/favorite_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="8dp"
             android:button="@drawable/selector_favorite"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/save_button"
+            app:layout_constraintStart_toEndOf="@+id/name_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/latlng_text"
@@ -65,39 +69,24 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="8dp"
+            android:text='@{favorite.latitude + ", " + favorite.longitude}'
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/address_text"
-            android:text='@{favorite.latitude + ", " + favorite.longitude}'
             tools:text="위도경도" />
-
-        <EditText
-            android:id="@+id/memo_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/latlng_text"
-            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="저장"
+            android:text="날씨 보기"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/memo_edit"
-            app:layout_constraintTop_toBottomOf="@+id/favorite_check"
-            app:layout_constraintVertical_bias="0.92" />
+            app:layout_constraintStart_toEndOf="@+id/latlng_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
     </android.support.constraint.ConstraintLayout>
 </layout>
